# $Id$
## Process this file with automake to produce Makefile.in
#
# Please add entries in alphabetical order 
#
lib_LTLIBRARIES = libgpstk.la
libgpstk_la_LDFLAGS = -version-number @GPSTK_SO_VERSION@
libgpstk_la_SOURCES = AlmOrbit.cpp \
      ANSITime.cpp \
      Antenna.cpp \
      AntexReader.cpp \
      ARBase.cpp \
      ARLambda.cpp \
      ARMLambda.cpp \
      ARSimple.cpp \
      AstronomicalFunctions.cpp \
      Bancroft.cpp \
      BasicFramework.cpp \
      BinexData.cpp \
      BinUtils.cpp \
      BLQDataReader.cpp \
      BrcClockCorrection.cpp \
      BrcKeplerOrbit.cpp \
      Chi2Distribution.cpp \
      CivilTime.cpp \
      ClockSatStore.cpp \
      CNAVClock.cpp \
      CNAVEphemeris.cpp \
      CNAV2EphClk.cpp \
      CodeBuffer.cpp \
      CommandLine.cpp \
      CommandOption.cpp \
      CommandOptionParser.cpp \
      CommandOptionWithCommonTimeArg.cpp \
      CommandOptionWithPositionArg.cpp \
      CommandOptionWithTimeArg.cpp \
      CommonTime.cpp \
      ConfDataReader.cpp \
      ConfDataWriter.cpp \
      DayTime.cpp \
      DCBDataReader.cpp \
      DOP.cpp \
      EngAlmanac.cpp \
      EngEphemeris.cpp \
      EngNav.cpp \
      ENUUtil.cpp \
      EphemerisRange.cpp \
      Epoch.cpp \
      EpochDataStore.cpp \
      Exception.cpp \
      expandtilde.cpp \
      Expression.cpp \
      FFData.cpp \
      FFStream.cpp \
      FICData.cpp \
      FICData109.cpp \
      FICData162.cpp \
      FICData62.cpp \
      FICData9.cpp \
      FICHeader.cpp \
      FileHunter.cpp \
      FileSpec.cpp \
      FIRDifferentiator5thOrder.cpp \
      GalEphemeris.cpp \
      GalEphemerisStore.cpp \
      GaussianDistribution.cpp \
      GenXSequence.cpp \
      GloEphemeris.cpp \
      GloEphemerisStore.cpp \
      GloFreqIndex.cpp \
      #GlonassSatelliteModel.cpp \
      GloRecord.cpp \
      GPSAlmanacStore.cpp \
      GPSEphemerisStore.cpp \
      GPSWeek.cpp \
      GPSWeekSecond.cpp \
      GPSWeekZcount.cpp \
      GPSZcount.cpp \
      HelmertTransform.cpp \
      IonexData.cpp \
      IonexHeader.cpp \
      IonexStore.cpp \
      IonoModel.cpp \
      IonoModelStore.cpp \
      JulianDate.cpp \
      LinearClockModel.cpp \
      Logger.cpp \
      LoopedFramework.cpp \
      MJD.cpp \
      MoonPosition.cpp \
      MOPSWeight.cpp \
      MSCData.cpp \
      MSCStore.cpp \
      Namelist.cpp \
      NEDUtil.cpp \
      ObsClockModel.cpp \
      ObsEpochMap.cpp \
      ObsID.cpp \
      ObsRngDev.cpp \
      OceanLoading.cpp \
      PackedNavBits.cpp \
      PoleTides.cpp \
      Position.cpp \
      PositionSatStore.cpp \
      PowerSum.cpp \
      PRSolution.cpp \
      RACRotation.cpp \
      ReferenceFrame.cpp \
      Rinex3ClockData.cpp \
      Rinex3ClockHeader.cpp \
      Rinex3EphemerisStore.cpp \
      Rinex3NavData.cpp \
      Rinex3NavHeader.cpp \
      Rinex3ObsData.cpp \
      Rinex3ObsHeader.cpp \
      RinexClockData.cpp \
      RinexClockHeader.cpp \
      #RinexConverter.cpp \
      RinexGloNavData.cpp \
      RinexGloNavHeader.cpp \
      RinexMetData.cpp \
      RinexMetHeader.cpp \
      RinexNavData.cpp \
      RinexNavHeader.cpp \
      RinexObsData.cpp \
      RinexObsHeader.cpp \
      RinexObsID.cpp \
      RinexSatID.cpp \
      RinexUtilities.cpp \
      RK4VehicleModel.cpp \
      RungeKutta4.cpp \
      SatDataReader.cpp \
      SEMAlmanacStore.cpp \
      SEMData.cpp \
      SEMHeader.cpp \
      SimpleIURAWeight.cpp \
      SimpleKalmanFilter.cpp \
      SMODFData.cpp \
      SolidTides.cpp \
      SourceID.cpp \
      SP3Data.cpp \
      SP3EphemerisStore.cpp \
      SP3Header.cpp \
      SP3SatID.cpp \
      SpecialFunctions.cpp \
      StudentDistribution.cpp \
      SunPosition.cpp \
      SuperKalmanFilter.cpp \
      SVExclusionList.cpp \
      SVNumXRef.cpp \
      SVPCodeGen.cpp \
      SystemTime.cpp \
      TimeConverters.cpp \
      TimeString.cpp \
      TimeSystem.cpp \
      TimeTag.cpp \
      Triple.cpp \
      TropModel.cpp \
      TypeID.cpp \
      UnixTime.cpp \
      VectorBase.cpp \
      WxObsMap.cpp \
      X1Sequence.cpp \
      X2Sequence.cpp \
      Xt.cpp \
      Xvt.cpp \
      YDSTime.cpp \
      YumaAlmanacStore.cpp \
      YumaData.cpp \
      $(GETOPT_SOURCE)

incldir = $(includedir)/gpstk
incl_HEADERS = AllanDeviation.hpp \
      AlmOrbit.hpp \
      ANSITime.hpp \
      Antenna.hpp \
      AntexReader.hpp \
      ARBase.hpp \
      ARLambda.hpp \
      ARMLambda.hpp \
      ARSimple.hpp \
      AstronomicalFunctions.hpp \
      Bancroft.hpp \
      BaseDistribution.hpp \
      BasicFramework.hpp \
      BinexData.hpp \
      BinexFilterOperators.hpp \
      BinexStream.hpp \
      BinUtils.hpp \
      BivarStats.hpp \
      BLQDataReader.hpp \
      BrcClockCorrection.hpp \
      BrcKeplerOrbit.hpp \
      CheckPRData.hpp \
      Chi2Distribution.hpp \
      CivilTime.hpp \
      ClockModel.hpp \
      ClockSatStore.hpp \
      CNAVClock.hpp \
      CNAVEphemeris.hpp \
      CNAV2EphClk.hpp \
      CodeBuffer.hpp \
      Combinations.hpp \
      CommandLine.hpp \
      CommandOption.hpp \
      CommandOptionParser.hpp \
      CommandOptionWithCommonTimeArg.hpp \
      CommandOptionWithPositionArg.hpp \
      CommandOptionWithTimeArg.hpp \
      CommonTime.hpp \
      ConfDataReader.hpp \
      ConfDataWriter.hpp \
      DayTime.hpp \
      DCBDataReader.hpp \
      DOP.hpp \
      EllipsoidModel.hpp \
      EngAlmanac.hpp \
      EngEphemeris.hpp \
      EngNav.hpp \
      ENUUtil.hpp \
      EphemerisRange.hpp \
      Epoch.hpp \
      EpochClockModel.hpp \
      EpochDataStore.hpp \
      Exception.hpp \
      expandtilde.hpp \
      Expression.hpp \
      ExtractC1.hpp \
      ExtractCombinationData.hpp \
      ExtractD1.hpp \
      ExtractD2.hpp \
      ExtractData.hpp \
      ExtractL1.hpp \
      ExtractL2.hpp \
      ExtractLC.hpp \
      ExtractP1.hpp \
      ExtractP2.hpp \
      ExtractPC.hpp \
      FFBinaryStream.hpp \
      FFData.hpp \
      FFStream.hpp \
      FFStreamError.hpp \
      FFTextStream.hpp \
      FICAStream.hpp \
      FICBase.hpp \
      FICData.hpp \
      FICData109.hpp \
      FICData162.hpp \
      FICData62.hpp \
      FICData9.hpp \
      FICFilterOperators.hpp \
      FICHeader.hpp \
      FICStream.hpp \
      FICStreamBase.hpp \
      FileFilter.hpp \
      FileFilterFrame.hpp \
      FileFilterFrameWithHeader.hpp \
      FileHunter.hpp \
      FileSpec.hpp \
      FileStore.hpp \
      FileUtils.hpp \
      FilterBase.hpp \
      FIRDifferentiator5thOrder.hpp \
      GalEphemeris.hpp \
      GalEphemerisStore.hpp \
      GaussianDistribution.hpp \
      GenXSequence.hpp \
      GeoidModel.hpp \
      GloEphemeris.hpp \
      GloEphemerisStore.hpp \
      GloFreqIndex.hpp \
      GloRecord.hpp \
      GPSAlmanacStore.hpp \
      GPSEllipsoid.hpp \
      GPSEphemerisStore.hpp \
      GPSGeoid.hpp \
      GPSWeek.hpp \
      GPSWeekSecond.hpp \
      GPSWeekZcount.hpp \
      GPSZcount.hpp \
      HelmertTransform.hpp \
      InOutFramework.hpp \
      IonexBase.hpp \
      IonexData.hpp \
      IonexHeader.hpp \
      IonexStore.hpp \
      IonexStream.hpp \
      IonoModel.hpp \
      IonoModelStore.hpp \
      JulianDate.hpp \
      LinearClockModel.hpp \
      Logger.hpp \
      logstream.hpp \
      LoopedFramework.hpp \
      MainAdapter.hpp \
      MathBase.hpp \
      Matrix.hpp \
      MatrixBase.hpp \
      MatrixBaseOperators.hpp \
      MatrixFunctors.hpp \
      MatrixImplementation.hpp \
      MatrixOperators.hpp \
      MiscMath.hpp \
      MJD.hpp \
      ModeledPseudorangeBase.hpp \
      MoonPosition.hpp \
      MOPSWeight.hpp \
      MSCBase.hpp \
      MSCData.hpp \
      MSCHeader.hpp \
      MSCStore.hpp \
      MSCStream.hpp \
      Namelist.hpp \
      NEDUtil.hpp \
      ObsClockModel.hpp \
      ObsEpochMap.hpp \
      ObsID.hpp \
      ObsRngDev.hpp \
      OceanLoading.hpp \
      OrbElemStore.hpp \
      ORDEpoch.hpp \
      PackedNavBits.hpp \
      PCodeConst.hpp \
      PoleTides.hpp \
      PolyFit.hpp \
      Position.hpp \
      PositionSatStore.hpp \
      PowerSum.hpp \
      PRSolution.hpp \
      PZ90Ellipsoid.hpp \
      RACRotation.hpp \
      ReferenceFrame.hpp \
      Rinex3ClockBase.hpp \
      Rinex3ClockData.hpp \
      Rinex3ClockHeader.hpp \
      Rinex3ClockStream.hpp \
      Rinex3EphemerisStore.hpp \
      Rinex3NavBase.hpp \
      Rinex3NavData.hpp \
      Rinex3NavFilterOperators.hpp \
      Rinex3NavHeader.hpp \
      Rinex3NavStream.hpp \
      Rinex3ObsBase.hpp \
      Rinex3ObsData.hpp \
      Rinex3ObsFilterOperators.hpp \
      Rinex3ObsHeader.hpp \
      Rinex3ObsStream.hpp \
      RinexClockBase.hpp \
      RinexClockData.hpp \
      RinexClockHeader.hpp \
      RinexClockStore.hpp \
      RinexClockStream.hpp \
      #RinexConverter.hpp \
      RinexGloNavData.hpp \
      RinexGloNavHeader.hpp \
      RinexGloNavStream.hpp \
      RinexMetBase.hpp \
      RinexMetData.hpp \
      RinexMetFilterOperators.hpp \
      RinexMetHeader.hpp \
      RinexMetStream.hpp \
      RinexNavBase.hpp \
      RinexNavData.hpp \
      RinexNavFilterOperators.hpp \
      RinexNavHeader.hpp \
      RinexNavStream.hpp \
      RinexObsBase.hpp \
      RinexObsData.hpp \
      RinexObsFilterOperators.hpp \
      RinexObsHeader.hpp \
      RinexObsID.hpp \
      RinexObsStream.hpp \
      RinexSatID.hpp \
      RinexUtilities.hpp \
      RK4VehicleModel.hpp \
      RTFileFrame.hpp \
      RungeKutta4.hpp \
      SatDataReader.hpp \
      SatID.hpp \
      SEMAlmanacStore.hpp \
      SEMBase.hpp \
      SEMData.hpp \
      SEMHeader.hpp \
      SEMStream.hpp \
      singleton.hpp \
      SimpleIURAWeight.hpp \
      SimpleKalmanFilter.hpp \
      SMODFData.hpp \
      SMODFStream.hpp \
      SolidTides.hpp \
      SolverBase.hpp \
      SourceID.hpp \
      SP3Base.hpp \
      SP3Data.hpp \
      SP3EphemerisStore.hpp \
      SP3Header.hpp \
      SP3SatID.hpp \
      SP3Stream.hpp \
      SpecialFunctions.hpp \
      Stats.hpp \
      StringUtils.hpp \
      StudentDistribution.hpp \
      SunPosition.hpp \
      SuperKalmanFilter.hpp \
      SVExclusionList.hpp \
      SVNumXRef.hpp \
      SVPCodeGen.hpp \
      SystemTime.hpp \
      TabularEphemerisStore.hpp \
      TabularSatStore.hpp \
      TimeConstants.hpp \
      TimeConverters.hpp \
      TimeNamedFileStream.hpp \
      TimeString.hpp \
      TimeSystem.hpp \
      TimeTag.hpp \
      Triple.hpp \
      TropModel.hpp \
      TypeID.hpp \
      UnixTime.hpp \
      ValidType.hpp \
      Vector.hpp \
      VectorBase.hpp \
      VectorBaseOperators.hpp \
      VectorOperators.hpp \
      WeightBase.hpp \
      WGS84Ellipsoid.hpp \
      WGS84Geoid.hpp \
      WxObsMap.hpp \
      X1Sequence.hpp \
      X2Sequence.hpp \
      Xt.hpp \
      Xvt.hpp \
      XvtStore.hpp \
      YDSTime.hpp \
      YumaAlmanacStore.hpp \
      YumaBase.hpp \
      YumaData.hpp \
      YumaHeader.hpp \
      YumaStream.hpp \
      convhelp.hpp \
      geometry.hpp \
      gps_constants.hpp \
      gpstkplatform.h \
      icd_200_constants.hpp \
      icd_glo_constants.hpp \
      icd_glo_freqindex.hpp \
      icd_gps_constants.hpp \
      mergePCodeWords.h \
      stl_helpers.hpp \
      $(GETOPT_INC)
